Various mobile spacing issues

--- a/_sass/base/_wrapper.scss
+++ b/_sass/base/_wrapper.scss
@@ -52,7 +52,8 @@
     }
 
     @media (max-width: $breakpointSmall) {
-        width: 90%;;
+        width: 90%;
+        padding-top: 7.4em;
     }
 }
 
