--- a/_sass/components/_visuals.scss
+++ b/_sass/components/_visuals.scss
@@ -28,4 +28,10 @@
             margin-bottom: 5%;
         }
     }
+
+    > video:last-of-type {
+        @media (max-width: $breakpointSmall) {
+            margin-bottom: 0;
+        }
+    }
 }
