--- a/_sass/components/_work.scss
+++ b/_sass/components/_work.scss
@@ -44,6 +44,8 @@
     @media (max-width: $breakpointSmall) {
         width: 100%;
         margin: 0 auto 5.8% auto;
+		transform: translateY(0);
+		opacity: 1;
     }
 
 	> a {
